s/(#[[:space:]]*include[[:space:]]+["<])vector_fpu\.h/\1bn\/vector_fpu.h/g
s/(#[[:space:]]*include[[:space:]]+["<])vector_x86\.h/\1bn\/vector_x86.h/g
	move dvec.h and friends into bn subheader directory [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])db\.h/\1rt\/db4.h/g
	move db.h to rt/db4.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])db5\.h/\1rt\/db5.h/g
	move db5.h to rt/db5.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])mater\.h/\1raytrace.h/g
	merge mater.h with rt/mater.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])nurb\.h/#include "raytrace.h"\n\1rt\/nurb.h/g
	move nurb.h to rt/nurb.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])rtfunc\.h/#include "raytrace.h"\n\1rt\/func.h/g
	move rtfunc.h to rt/func.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])tol\.h/#include "bn.h"\n#include "raytrace.h"\n\1rt\/tol.h/g
	consolidate tol.h and rt/tol.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])tie\.h/\1rt\/tie.h/g
	move tie.h to rt/tie.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])solid\.h/#include "raytrace.h"\n\1rt\/solid.h/g
	move solid.h to rt/solid.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])shadework\.h/\1optical\/shadework.h/g
	move shadework.h to optical/shadework.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])shadefuncs\.h/\1optical.h/g
	move shadefuncs.h to optical/shadefuncs.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])light\.h/#include "bn.h"\n#include "raytrace.h"\n\1optical\/light.h/g
	move light.h to optical/light.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])plastic\.h/\1optical\/plastic.h/g
	move plastic.h to optical/plastic.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])rtgeom\.h/\1rt\/geom.h/g
	move rtgeom.h to rt/geom.h [7.25]
s/rt_vlist_get_cmd_description/bn_vlist_get_cmd_description/g
s/rt_ck_vlist/bn_ck_vlist/g
s/rt_vlist_export/bn_vlist_export/g
s/rt_vlblock_free/bn_vlblock_free/g
s/rt_vlblock_find/bn_vlblock_find/g
        move vlist functions from librt to libbn [7.25]